--- a/pom.xml
+++ b/pom.xml
@@ -20,10 +20,10 @@
 
     <artifactId>hygieia-publisher</artifactId>
     <packaging>hpi</packaging>
-    <version>2.2.2-SNAPSHOT</version>
+    <version>2.2.3-SNAPSHOT</version>
     <name>Hygieia Publisher Plugin</name>
     <description>A Build status publisher that notifies Hygieia</description>
-    <url>https://github.com/Hygieia/Hygieia</url>
+    <url>https://github.com/Hygieia/hygieia-publisher-jenkins-plugin</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
