add in jenkins-war in test scope to allow mvn hpi:run to spin up a server with the plugin.
This allows for easy local sanity testing of the plugin so you can debug any issues

Also correct a typo.

--- a/pom.xml
+++ b/pom.xml
@@ -158,7 +158,14 @@
             <artifactId>workflow-job</artifactId>
             <version>1.11</version>
         </dependency>
-
+        <!-- add dependency to enable local testing of the plugin-->
+        <dependency>
+            <groupId>org.jenkins-ci.main</groupId>
+            <artifactId>jenkins-war</artifactId>
+            <type>war</type>
+            <version>1.645</version>
+            <scope>test</scope>
+        </dependency>
         <!-- mockito for mocking in tests -->
         <dependency>
             <groupId>org.mockito</groupId>
