--- a/.github/workflows/maven-pr-checks.yml
+++ b/.github/workflows/maven-pr-checks.yml
@@ -1,11 +1,12 @@
-name: Java CI
+name: Java Compile and Test
 
-on: [push]
-
+on: 
+  pull_request:
+    branches: 
+      - master
 jobs:
   build:
-
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
 
     steps:
     - uses: actions/checkout@v1
@@ -14,4 +15,5 @@ jobs:
       with:
         java-version: 1.8
     - name: Build with Maven
-      run: mvn -B package --file pom.xml
+      run: mvn test --file pom.xml
+
